fi darwin moving to topics